--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi
 uvicorn
 requests
-google-auth-oauthlib
 google-auth
+google-auth-oauthlib
+google-auth-httplib2
 google-api-python-client
-PyJWT
